# KonfAI

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  RUST_BURN_IMPLEMENTATION_PLAN.md  RUST_BURN_ROADMAP.md  SPIKE_FINDINGS.md  pyproject.toml
.github/workflows/: commit-hygiene.yml  konfai_apps_ci.yml  konfai_ci.yml  konfai_mcp_ci.yml  publish.yml
apps/impact_reg/: .gitignore  README.md  pyproject.toml
apps/impact_reg/impact_reg_konfai/: __init__.py  cli.py  impact_reg.py
apps/impact_reg/impact_reg_konfai/models/: __init__.py  convexadam.py  elastix.py  elastix_engine.py  elastix_install.py  fireants.py
apps/impact_reg/impact_reg_konfai/tests/: test_evaluate_landmark_direction.py
apps/impact_reg/tests/: conftest.py
apps/impact_reg/tests/integration/: test_register_patch_blend.py
apps/impact_reg/tests/unit/: test_cli.py  test_engine_contracts.py  test_evaluate_landmark_direction.py  test_fireants_distances.py  test_orchestration.py
apps/impact_seg/: README.md  pyproject.toml  setup.py
apps/impact_seg/impact_seg_konfai/: __init__.py  cli.py
apps/impact_seg/tests/: test_cli.py
apps/impact_synth/: README.md  pyproject.toml
apps/mrsegmentator/: README.md  pyproject.toml  setup.py
apps/totalsegmentator/: README.md  pyproject.toml
docker/: Dockerfile  README.md
docs/releases/: v1.6.0.md
docs/scripts/: generate_app_proof_gallery.py  generate_registration_proof_gallery.py  generate_scale_gallery.py  generate_visual_gallery.py
docs/source/: conf.py  development.md  index.rst  quickstart.rst  troubleshooting.md
examples/: README.md
examples/ImpactReg/: README.md  register_demo.ipynb
examples/ImpactSeg/: ImpactSeg_demo.ipynb  README.md
examples/ImpactSynth/: ImpactSynth_demo.ipynb  README.md
examples/MRSegmentator/: MRSegmentator_demo.ipynb  README.md
examples/Registration/: Config.yml  Evaluation.yml  Prediction.yml  README.md  make_dataset.py
examples/Segmentation/: Config.yml  Model.py  Prediction.yml  README.md  Segmentation_demo.ipynb
examples/Synthesis/: Config.yml  Config_GAN.yml  Evaluation.yml  Model.py  Prediction.yml  README.md  Synthesis_demo.ipynb  UNetpp.yml  UnNormalize.py
examples/TotalSegmentator/: README.md  TotalSegmentator_demo.ipynb
konfai/: __init__.py  evaluator.py  export.py  main.py  predictor.py  trainer.py
konfai-apps/: README.md  pyproject.toml  setup.py
konfai-apps/konfai_apps/: __init__.py  app.py  app_repository.py  app_server.py  bundle.py  cli.py  remote_options.py
konfai-apps/tests/: conftest.py  test_slicer_api_contract.py  test_slicer_cli_json_contract.py
konfai-mcp/: README.md  pyproject.toml
konfai-mcp/konfai_mcp/: __init__.py  apps_catalog.json  capabilities.py  catalog.py  config_io.py  dataset_inspection.py  extensions.py  file_io.py  guide.py  live_parse.py  metrics_service.py  runner.py  server.py  server_apps.py  server_experiments.py  server_jobs.py  server_support.py  workflows.py  workspace.py
konfai-mcp/scripts/: generate_tool_reference.py
konfai-mcp/tests/: _runner_wedge_target.py  conftest.py  mcp_test_helpers.py  test_live_parse.py  test_mcp_server.py  test_mcp_server_apps.py  test_mcp_server_capabilities.py  test_mcp_server_catalog.py  test_mcp_server_cli.py  test_mcp_server_dataset_tools.py  test_mcp_server_delete_run.py  test_mcp_server_experiments.py  test_mcp_server_extensions.py  test_mcp_server_fixes.py  test_mcp_server_jobs.py  test_mcp_server_lot4.py  test_mcp_server_lot5.py  test_mcp_server_lot6.py  test_mcp_server_pipeline.py  test_mcp_server_refine_loop.py  test_mcp_server_reliability.py  test_mcp_server_runner_fixes.py  test_mcp_server_segmentation_pipeline.py  test_mcp_server_set_live_tunables.py  test_mcp_server_support.py  test_mcp_server_tool_index.py  test_mcp_server_vram.py  test_review_mcp_apps_misc.py  test_workflow_registry.py
konfai-rs/: .gitignore  Cargo.toml  README.md  build.rs
konfai-rs/src/: lib.rs
konfai-web/: .gitignore  README.md  index.html  main.mjs  package.json
konfai-web/assets/: manifest.json
konfai-web/src/: runtime.mjs
konfai-web/test/: validate.mjs
konfai/data/: __init__.py  augmentation.py  data_manager.py  patching.py  transform.py
konfai/metric/: __init__.py  measure.py  schedulers.py
konfai/network/: blocks.py  network.py
konfai/utils/: ITK.py  __init__.py  config.py  dataset.py  dicom.py  live_control.py  model_builder.py  ome_zarr.py  pretrained.py  runtime.py  utils.py  vram.py
spike/: README.md  spike_export_impact_synth.py  spike_export_unet.py
spike/konfai-rs-spike/: .gitignore  Cargo.toml  build.rs
studio/: .gitignore  README.md  pyproject.toml  setup.py
studio/docs/: PLAN.md  REMOTE.md  STUDIO_SPEC.md  brief-for-matt.html  spec-visual.html  ui-mockup.html
studio/frontend/: index.html  package-lock.json  package.json  vite.config.ts
studio/frontend/src/: App.tsx  AppZoo.tsx  Chat.tsx  Console.tsx  Deploy.tsx  FolderBrowser.tsx  Login.tsx  RightPanel.tsx  Viewer.tsx  api.ts  main.tsx  sessionState.ts  sse.ts  status.ts  styles.css  useJobStream.ts  useJson.ts
studio/frontend/src/konfai-rs/: konfai_rs.d.ts  konfai_rs.js  konfai_rs_bg.wasm  konfai_rs_bg.wasm.d.ts
studio/konfai_studio/: __init__.py  __main__.py  agent.py  auth.py  cli.py  jobs.py  paths.py  registry.py  server.py  tensorboard.py  terminal.py
studio/tests/: test_smoke.py
tests/: conftest.py
tests/integration/: test_konfai_auto_patch_prediction.py  test_konfai_auto_patch_training.py  test_konfai_core_workflows.py  test_konfai_ensemble_tta.py  test_konfai_resume.py  test_konfai_streamed_evaluation.py  test_konfai_streamed_prediction.py
tests/unit/: test_accepts_init_dispatch.py  test_async_writes.py  test_audit_fixes.py  test_augmentation.py  test_augmentation_fixes.py  test_augmentation_flip.py  test_augmentation_foreign.py  test_augmentation_label_interpolation.py  test_auto_patching.py  test_batchnorm_init.py  test_blocks.py  test_clip_normalize_block.py  test_config.py  test_config_dict_roundtrip.py  test_config_dotted_dict_keys.py  test_crop_transform_shape.py  (+89 more)
(+127 files in other folders)
