[build-system]
requires = ["setuptools>=69", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "konfai-studio"
# dependencies are dynamic (see setup.py): konfai-mcp is pinned to the exact release version so the BFF
# and the MCP server it drives ship in lockstep, mirroring how the apps/* bundles pin konfai.
dynamic = ["version", "dependencies"]
description = "KonfAI Studio - a chatbot web UI driving the konfai-mcp server (BFF + front)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

[project.optional-dependencies]
anthropic = ["anthropic>=0.66"]  # Claude API with a metered key / OAuth token
openai = ["openai>=1.40"]  # OpenAI-compatible local servers (vLLM / Ollama / LM Studio)

[project.scripts]
konfai-studio = "konfai_studio.cli:main"

[tool.setuptools_scm]
root = ".."
tag_regex = "^v(?P<version>.*)$"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
include = ["konfai_studio", "konfai_studio.*"]

[tool.setuptools.package-data]
# Recursive: the built front is web/index.html + web/assets/* (JS/CSS/WASM) -- a flat "web/*" drops assets/.
konfai_studio = ["web/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
