[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "impact-reg-konfai"
dynamic = ["version", "dependencies"]
description = "Fast and lightweight CLI for pairwise registration workflows with IMPACT-Reg presets through the KonfAI runtime."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

authors = [
  { name = "Valentin Boussot", email = "boussot.v@gmail.com" }
]

[project.urls]
Homepage = "https://github.com/vboussot/ImpactLoss"
Repository = "https://github.com/vboussot/ImpactLoss"
Issues = "https://github.com/vboussot/ImpactLoss/issues"
License = "https://www.apache.org/licenses/LICENSE-2.0"

[project.scripts]
impact-reg-konfai = "impact_reg_konfai.cli:main"

[tool.setuptools_scm]
root = "../.."
tag_regex = "^v(?P<version>.*)$"
local_scheme = "no-local-version"
