[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "impact-seg-konfai"
dynamic = ["version", "dependencies"]
description = "Fast and lightweight CLI for anatomical segmentation with 2.5D U-Net models using a residual encoder within the KonfAI framework."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

authors = [
  { name = "Valentin Boussot", email = "boussot.v@gmail.com" }
]

[project.urls]
Homepage = "https://github.com/fideus-labs/KonfAI"
Repository = "https://github.com/fideus-labs/KonfAI"
Issues = "https://github.com/fideus-labs/KonfAI/issues"
License = "https://www.apache.org/licenses/LICENSE-2.0"

[project.scripts]
impact-seg-konfai = "impact_seg_konfai.cli:main"

[tool.setuptools_scm]
root = "../.."
tag_regex = "^v(?P<version>.*)$"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]
